openpanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: cert-issuer
    nginx.org/redirect-to-https: "true"
    nginx.org/rewrites: serviceName=op-api rewrite=/
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openpanel.byulmaru.co
      secretName: tls
  rules:
    - host: openpanel.byulmaru.co
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: op-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: op-dashboard
                port:
                  number: 3000
